refactor: Update wrestler state handling and clean up related tests and SQL migrations